# todo-axum-htmx

./: .env  Cargo.toml  Makefile  README.md
.sqlx/: query-229ac3c3c98063d8bce096a3f1de73f1c6fce0e857a1daed9acc3423cc2c200f.json  query-32b47f662c860642958c7ce403af39588443332c8995c51353a9df50edecaa60.json  query-34bbe29f7db3a996ef5c052602508f881702581f494fa4da85bea1caae4ed4fd.json  query-51d219b30a9bc11199f0cda5e444881c715bbd6d14c8e14d0e4e71cfac395944.json  query-7a8e673f095dbce2163e90923925077b8e4a14111a0bcd61b6301925efa27bd3.json  query-8a3e5227a9136a88e134f825682f902ba790d0825c7d43c90ead779831c690fe.json  query-a0290f2d49a882677342cc3ea4dbff2b5e750d9ab07da8bbd2c8b7a51e5245f9.json  query-c4d95bb4e8556220046630c172e87e62300fbc41d12e5e8fca68e8ac550601c3.json  query-e9e173f4aa4548db8582b75f7fd40b766a6de51f0a306975a4aeac6f97ea5116.json  query-f07e0eb28ee20a96554f5364fcebe45a49c384419d884cc4c94dfdf37443712c.json
client/: 404.html  index.html  myscript.js  styles.css
migrations/: 20231207053842_create-initial-tables.sql  20231208060803_add-position-to-todos.down.sql  20231208060803_add-position-to-todos.up.sql  20231225073658_create-user-table.down.sql  20231225073658_create-user-table.up.sql
src/: app.rs  lib.rs  main.rs  utils.rs
src/sessions/: mod.rs  routes.rs  templates.rs
src/todos/: db.rs  mod.rs  responses.rs  routes.rs  templates.rs
src/users/: db.rs  mod.rs  model.rs  routes.rs  templates.rs
templates/: base.html  login.html  login_form.html  todo_edit.html  todo_li.html  todo_swap_oob.html  todos_index.html  todos_inner.html  todos_ul.html  users_create.html  users_form.html  users_new.html
