[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tower = { version = "0.4", features = ["util"] }
listenfd = "1.0.1"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
