[package]
name = "todo_axum_htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tower = { version = "0.4", features = ["util"] }
listenfd = "1.0.1"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
sqlx = { version = "0.7.3", features = ["migrate", "postgres", "time", "macros", "runtime-tokio"] }
indoc = "2.0.4"
tracing = "0.1.40"
axum-extra = { version = "0.9.0", features = ["form"] }
tower-cookies = { version = "0.10.0", features = ["private", "axum-core"] }
futures = "0.3.29"
askama = "0.12.1"
ring = "0.17.7"
data-encoding = "2.5.0"
dotenv = "0.15.0"
